// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline/GlobalTrack matches the snapshot of a global process track 1`] = `
<li
  class="timelineTrack"
>
  <div
    class="timelineTrackRow timelineTrackGlobalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackGlobalGrippy"
      title="thread: \\"GeckoMain\\" (0)
process: \\"tab\\" (222)"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        Content Process
        <div
          class="timelineTrackNameButtonAdditionalDetails"
        >
          PID: 
          222
        </div>
      </button>
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackThread expanded"
      >
        <div
          class="timelineMarkers timelineMarkersMemory"
          data-testid="TimelineMarkersMemory"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <canvas
              class="timelineMarkersCanvas"
              height="400"
              width="400"
            />
          </div>
        </div>
        <div
          class="timelineMarkers"
          data-testid="TimelineMarkersJank"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <canvas
              class="timelineMarkersCanvas"
              height="400"
              width="400"
            />
          </div>
        </div>
        <div
          class="timelineMarkers timelineMarkersGeckoMain"
          data-testid="TimelineMarkersOverview"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <canvas
              class="timelineMarkersCanvas"
              height="400"
              width="400"
            />
          </div>
        </div>
        <div
          class="threadActivityGraph"
        >
          <canvas
            class="threadActivityGraphCanvas threadActivityGraphCanvas"
            height="400"
            width="400"
          >
            <h2>
              Activity Graph for 
              Content Process
            </h2>
            <p>
              This graph shows a visual chart of thread activity.
            </p>
          </canvas>
        </div>
        <div
          class="threadSampleGraph"
        >
          <canvas
            class="threadSampleGraphCanvas threadSampleGraphCanvas"
            height="400"
            width="400"
          >
            <h2>
              Stack Graph for 
              Content Process
            </h2>
            <p>
              This graph charts the stack height of each sample.
            </p>
          </canvas>
        </div>
        <div
          class="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
  <ol
    class="timelineTrackLocalTracks"
  >
    <li
      class="timelineTrack timelineTrackLocal"
    >
      <div
        class="timelineTrackRow timelineTrackLocalRow selected"
      >
        <div
          class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
          title="thread: \\"DOM Worker\\" (0)
process: \\"tab\\" (222)"
        >
          <button
            class="timelineTrackNameButton"
            type="button"
          >
            DOM Worker
          </button>
        </div>
        <div
          class="timelineTrackTrack"
        >
          <div
            class="timelineTrackThread expanded"
          >
            <div
              class="timelineMarkers selected"
              data-testid="TimelineMarkersJank"
            >
              <div
                class="react-contextmenu-wrapper"
              >
                <canvas
                  class="timelineMarkersCanvas"
                  height="400"
                  width="400"
                />
              </div>
            </div>
            <div
              class="threadActivityGraph"
            >
              <canvas
                class="threadActivityGraphCanvas threadActivityGraphCanvas"
                height="400"
                width="400"
              >
                <h2>
                  Activity Graph for 
                  DOM Worker
                </h2>
                <p>
                  This graph shows a visual chart of thread activity.
                </p>
              </canvas>
            </div>
            <div
              class="threadSampleGraph"
            >
              <canvas
                class="threadSampleGraphCanvas threadSampleGraphCanvas"
                height="400"
                width="400"
              >
                <h2>
                  Stack Graph for 
                  DOM Worker
                </h2>
                <p>
                  This graph charts the stack height of each sample.
                </p>
              </canvas>
            </div>
            <div
              class="timelineEmptyThreadIndicator"
            />
          </div>
        </div>
      </div>
    </li>
    <li
      class="timelineTrack timelineTrackLocal"
    >
      <div
        class="timelineTrackRow timelineTrackLocalRow"
      >
        <div
          class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
          title="thread: \\"Style\\" (0)
process: \\"tab\\" (222)"
        >
          <button
            class="timelineTrackNameButton"
            type="button"
          >
            Style
          </button>
        </div>
        <div
          class="timelineTrackTrack"
        >
          <div
            class="timelineTrackThread expanded"
          >
            <div
              class="timelineMarkers"
              data-testid="TimelineMarkersJank"
            >
              <div
                class="react-contextmenu-wrapper"
              >
                <canvas
                  class="timelineMarkersCanvas"
                  height="400"
                  width="400"
                />
              </div>
            </div>
            <div
              class="threadActivityGraph"
            >
              <canvas
                class="threadActivityGraphCanvas threadActivityGraphCanvas"
                height="400"
                width="400"
              >
                <h2>
                  Activity Graph for 
                  Style
                </h2>
                <p>
                  This graph shows a visual chart of thread activity.
                </p>
              </canvas>
            </div>
            <div
              class="threadSampleGraph"
            >
              <canvas
                class="threadSampleGraphCanvas threadSampleGraphCanvas"
                height="400"
                width="400"
              >
                <h2>
                  Stack Graph for 
                  Style
                </h2>
                <p>
                  This graph charts the stack height of each sample.
                </p>
              </canvas>
            </div>
            <div
              class="timelineEmptyThreadIndicator"
            />
          </div>
        </div>
      </div>
    </li>
  </ol>
</li>
`;

exports[`timeline/GlobalTrack matches the snapshot of a global process track without a thread 1`] = `
<li
  class="timelineTrack"
>
  <div
    class="timelineTrackRow timelineTrackGlobalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackGlobalGrippy"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        Process 5555
      </button>
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackThreadBlank"
        style="--timeline-track-thread-blank-height: 30px;"
      />
    </div>
  </div>
  <ol
    class="timelineTrackLocalTracks"
  >
    <li
      class="timelineTrack timelineTrackLocal"
    >
      <div
        class="timelineTrackRow timelineTrackLocalRow"
      >
        <div
          class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
          title="thread: \\"NoMain\\" (0)
process: \\"default\\" (5555)"
        >
          <button
            class="timelineTrackNameButton"
            type="button"
          >
            NoMain
          </button>
        </div>
        <div
          class="timelineTrackTrack"
        >
          <div
            class="timelineTrackThread expanded"
          >
            <div
              class="timelineMarkers"
              data-testid="TimelineMarkersJank"
            >
              <div
                class="react-contextmenu-wrapper"
              >
                <canvas
                  class="timelineMarkersCanvas"
                  height="400"
                  width="400"
                />
              </div>
            </div>
            <div
              class="threadActivityGraph"
            >
              <canvas
                class="threadActivityGraphCanvas threadActivityGraphCanvas"
                height="400"
                width="400"
              >
                <h2>
                  Activity Graph for 
                  NoMain
                </h2>
                <p>
                  This graph shows a visual chart of thread activity.
                </p>
              </canvas>
            </div>
            <div
              class="threadSampleGraph"
            >
              <canvas
                class="threadSampleGraphCanvas threadSampleGraphCanvas"
                height="400"
                width="400"
              >
                <h2>
                  Stack Graph for 
                  NoMain
                </h2>
                <p>
                  This graph charts the stack height of each sample.
                </p>
              </canvas>
            </div>
            <div
              class="timelineEmptyThreadIndicator"
            />
          </div>
        </div>
      </div>
    </li>
  </ol>
</li>
`;
